--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "less": "^4.1.3",
+    "netlify-cli": "^15.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
