--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
             {
                 "cmd": "npx less ${fileDirname}\\\\${fileBasenameNoExt}.less ${fileDirname}\\\\${fileBasenameNoExt}.css",
                 "match": ".*less",
+                "notMatch": ".*Vars.less"
             }
         ]
     }
