--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ dist-ssr
 *.local
 
 # Editor directories and files
+.vscode/*
+.vite/*
+!.vscode/settings.json
 !.vscode/extensions.json
 .idea
 .DS_Store
